--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "(dropdb --if-exists test-cw-web-store && createdb test-cw-web-store) && NODE_ENV=mocha"
   },
   "author": "Candace wilson",
   "license": "ISC",
@@ -20,6 +21,9 @@
     "pg": "^8.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
