--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js",
-    "start": "node index.js",
-    "dev": "nodemon",
-    "test": "(dropdb --if-exists test-cw-web-store && createdb test-cw-web-store) && NODE_ENV=mocha"
-  },
-  "author": "Candace wilson",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "debug": "^4.1.1",
-    "express": "^4.17.1",
-    "knex": "^0.21.1",
-    "morgan": "^1.10.0",
-    "pg": "^8.2.1"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^7.1.2",
-    "nodemon": "^2.0.4",
-    "supertest": "^4.0.2"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"server": "nodemon index.js",
+		"start": "node index.js",
+		"dev": "nodemon",
+		"test": "(dropdb --if-exists test-cw-web-store && createdb test-cw-web-store) && NODE_ENV=test mocha"
+	},
+	"author": "Candace wilson",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cookie-parser": "^1.4.5",
+		"debug": "^4.1.1",
+		"express": "^4.17.1",
+		"knex": "^0.21.1",
+		"morgan": "^1.10.0",
+		"pg": "^8.2.1"
+	},
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"mocha": "^7.1.2",
+		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2"
+	}
 }
